{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Player",
            "id": "722ca761-d876-4cb4-8d57-f02b3a0484a2",
            "actions": [
                {
                    "name": "Stick/WSAD",
                    "type": "Value",
                    "id": "d82e1d30-cd24-4dff-97a8-7d97ad343415",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "f2e20ef4-13a0-4b52-af8d-d2f203ca0586",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick/WSAD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b03ba645-5741-493b-8eb1-9a44229033b7",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick/WSAD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e2e77234-d2c2-453b-b014-e064071d7588",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick/WSAD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "d6a9e6d2-838e-4a88-a4a2-50c07ce281fb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick/WSAD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d01ff99c-9e3d-424e-b4f6-9b9d34c1cc36",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick/WSAD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "2820db74-7396-43eb-b145-4e88892734c7",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stick/WSAD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}